video/experiments/screego/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: screego
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,1.2.3.4,1.2.3.4
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - screego.example.duckdns.org
    secretName: screego.example.duckdns.org-secret-staging
  rules:
  - host: screego.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: screego
            port:
              name: web
